--- a/UsuarioService/src/main/resources/application.properties
+++ b/UsuarioService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Configuration
 spring.application.name=usuario-service
-server.port=8083
+server.port=8081
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/db_usuario?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -23,3 +23,6 @@ jwt.expiration=86400000
 logging.level.com.example.UsuarioService=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Geografia Service URL
+geografia.service.url=http://localhost:8083
