--- a/VentasService/src/main/resources/application.properties
+++ b/VentasService/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+inventario.service.url=http://localhost:8082
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
