--- a/VentasService/src/main/resources/application.properties
+++ b/VentasService/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 
 # Logging Configuration
-logging.level.com.example.VentasService=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.example.VentasService=INFO
+logging.level.org.hibernate.SQL=INFO
