--- a/geografiaService/src/main/resources/application.properties
+++ b/geografiaService/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 
 # Logging Configuration
-logging.level.com.example.geografiaService=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.example.geografiaService=INFO
+logging.level.org.hibernate.SQL=INFO
