--fix de test, swagger con schema , fix errores de swagger

--- a/UsuarioService/src/main/resources/application.properties
+++ b/UsuarioService/src/main/resources/application.properties
@@ -27,3 +27,10 @@ logging.level.org.springframework.security=INFO
 
 # Geografia Service URL
 geografia.service.url=http://localhost:8083
+
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.show-actuator=false
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
