--- a/geografiaService/src/main/resources/application.properties
+++ b/geografiaService/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.open-in-view=false
 # Logging Configuration
 logging.level.com.example.geografiaService=INFO
 logging.level.org.hibernate.SQL=INFO
+
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
