--- a/VentasService/src/main/resources/application.properties
+++ b/VentasService/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.open-in-view=false
 # Logging Configuration
 logging.level.com.example.VentasService=INFO
 logging.level.org.hibernate.SQL=INFO
+
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
